# Cartesia_Antropic_Hackathon

./: AGENTS.md  CODE_RETRIEVAL_ANALYSIS.md  NOTION_SETUP_GUIDE.md  ONBOARDING_GUIDE.md  README.md  README_LINE_AGENT.md  find_parent_page.py  get_cartesia_voices.py  quick_fix_guide.md  setup_line_agent.sh  test_notion_connection.py
.claude/skills/add-prompt/: SKILL.md
.claude/skills/add-quest/: SKILL.md
.claude/skills/add-ws-message/: SKILL.md
.claude/skills/code-explanation/: SKILL.md  reference.md
.claude/skills/curriculum-integration/: SKILL.md  examples.md
.claude/skills/debug-ws/: SKILL.md
.claude/skills/fix-cartesia-stt/: SKILL.md
.claude/skills/fix-cartesia-tts/: SKILL.md
.claude/skills/fix-notion/: SKILL.md
.claude/skills/improve-search/: SKILL.md
.claude/skills/quest-generation/: SKILL.md  examples.md
.claude/skills/run-server/: SKILL.md
client/: app.js  app_calls_api.js  index.html  style.css
line_agent/: cartesia.toml  main.py  pyproject.toml  tools.py
line_agent/.cartesia/: config.toml
server/: .env.example  anthropic_client.py  api_routes.py  cache.py  cartesia_stt.py  cartesia_stt_old.py  cartesia_tts.py  config.py  conversation_flow.py  main.py  models.py  requirements.txt  server.crt  server.key  test_enhanced_search.py  test_without_notion.py  ws_handler.py
server/notion/: blocks.py  client.py  read_curriculum.py  write_trail.py
server/orchestrator/: chat.py  dm.py  prompts.py  quest_templates.py  router.py
server/repo/: __init__.py  enhanced_search.py  evidence.py  file.py  rg.py  scan.py
(+4 files in other folders)
